Theme Update & more content

--- a/index.html
+++ b/index.html
@@ -3,30 +3,51 @@
 <title>Dummkopf#4781</title>
 
 <style>
-    body {background-color: coral;}
+    body {background-color: #c57b57;}
     h1 { text-align: center; }
     h3 { text-align: center; }
     h4 { text-align: center; }
+    h5 { text-align: center; }
+    h6 { text-align: center; }
+    ::selection {
+        background: #A26900;
+    }
+    a { color: #f7dba7; }
+    
 </style>
 
 <head>
-    <font color="#FFFFFF" face = "Courier New"><h1>Dummkopf#4781 Projects!</h1></font>
+    <font color=#000000" face = "Verdana"><h1>Dummkopf#4781 Projects!</h1></font>
 </head>
 
 <body>
-    <font color="#FFFFFF" face = "Courier New">
+    <b>
+    <font color="#041f1e" face = "Verdana">
     <h3>Github Projects</h3>
     <h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/Dunn-Dev8">Github Page</a></h4>
-    <h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/Dunn-Dev8/LinuxPlakourOPENSAUS">Linux Pakour Project</a></h4>
-    <h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/Dunn-Dev8/dunn-dev8.github.io">Simple website (Using Github Pages</a></h4>
-    <h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/Dunn-Dev8/ScratchSnake">ScratchSnake Project</a></h4>
+    <h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/Dunn-Dev8/onexanime">Onex Anime</a></h4>
+    <h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/Dunn-Dev8/ScratchSnake">Scratch Snake</a></h4>
     <h3>Itch.io Projects</h3>
     <h4><a target="_blank" rel="noopener noreferrer" href="https://dunnkopf.itch.io/">Itch.io Page</a></h4>
     <h4><a target="_blank" rel="noopener noreferrer" href="https://dunnkopf.itch.io/fnaf-logans-location">Fnaf Logans Location</a></h4>
-
+    <h4><a target="_blank" rel="noopener noreferrer" href="https://dunnkopf.itch.io/luaplayground-v02">Luaplayground v0.2</a></h4>
+    
+    <h3>Paste Bin</h3>
+    <h4><a target="_blank" rel="noopener noreferrer" href="https://pastebin.com/u/Dunnk0pf1">Pastebin Profile</a></h4>
+    <h4><a target="_blank" rel="noopener noreferrer" href="https://pastebin.com/ELUM0RmH">Roblox</a></h4>
+    <h4><a target="_blank" rel="noopener noreferrer" href="https://pastebin.com/5iuD17Vx">Minecraft</a></h4>
     <h3>Old Website</h3>
+    <h4><a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/Jacobnf">Linktr.ee</a></h4>
+    <h3>Special thanks</h3>
+    <h5>Thanks to https://github.com/ for providing free hosting of the website.</h5>
     </font>
-
+    </b>
 </body>
+
+<footer>
+    <b>
+    <h6>Copyright © 2021 Dunn-Dev8, All Rights Reserved.</h6>
+    </b>
+</footer>
 
 </html>
