404 and blog.html added

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <h4><a target="_blank" rel="noopener noreferrer" href="https://pastebin.com/u/Dunnk0pf1">Pastebin Profile</a></h4>
     <h4><a target="_blank" rel="noopener noreferrer" href="https://pastebin.com/ELUM0RmH">Roblox</a></h4>
     <h4><a target="_blank" rel="noopener noreferrer" href="https://pastebin.com/5iuD17Vx">Minecraft</a></h4>
-    <h3>Old Website</h3>
-    <h4><a target="_blank" rel="noopener noreferrer" href="https://linktr.ee/Jacobnf">Linktr.ee</a></h4>
+    <h3>Website Navigation</h3>
+    <h4><a href="blog.html">Blog</a></h4>
     <h3>Special thanks</h3>
     <h5>Thanks to https://github.com/ for providing free hosting of the website.</h5>
     </font>
