added working blogging system

--- a/404.html
+++ b/404.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
+<style>
+    body {background-color: #c57b57;}
+    h1 { text-align: center; }
+    h3 { text-align: center; }
 
+    ::selection {
+        background: #A26900;
+    }
+    a { color: #f7dba7; }
+    
+</style>
 <body>
-    <h6>404 PAGE NOT FOUND ;( </h6>
+    <h1>404 PAGE NOT FOUND ;( </h1>
+    <h3>Error when trying to find url specified. Please try re-entering the url porvided and try again</h3>
 </body>
