--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     <font color="#041f1e" face = "Verdana">
     <h4>Navigation</h4><h3>Recent Posts</h3>
     <h4><a href="index.html">Main Page</a></h4> 
-    <h3><a href="blog.html">Lorem Ipsum</a></h3>
+    <h3><a href="Article-Lorem-Ipsum.html">Lorem Ipsum</a></h3>
     <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h6>
 
