--- a/404.html
+++ b/404.html
@@ -11,6 +11,11 @@
     
 </style>
 <body>
+    <font color=#000000" face = "Verdana">
     <h1>404 PAGE NOT FOUND ;( </h1>
     <h3>Error when trying to find url specified. Please try re-entering the url porvided and try again</h3>
+    <h3>Website Navigation</h3> 
+    <h3><a href="./index.html">Main Page</a></h3>
+    <h3><a href="./blog.html">Blog</a></h3>
+    </font>
 </body>
