--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,9 @@
 <style>
     body {background-color: #c57b57;}
     h1 { text-align: center; }
+    h2 { text-align: center; }
     h3 { text-align: center; }
-    h3 { text-align: center; }
+    h4 { text-align: center; }
     h5 { text-align: center; }
     h6 { text-align: center; }
     ::selection {
@@ -23,11 +24,12 @@
 <body>
     <b>
     <font color="#041f1e" face = "Verdana">
-    <h4>Navigation</h4><h3>Recent Posts</h3>
-    <h4><a href="index.html">Main Page</a></h4> 
-    <h3><a href="Article-Lorem-Ipsum.html">Lorem Ipsum</a></h3>
+    <h3>Recent Posts</h3> 
+    <h3><a href="posts/Article-Lorem-Ipsum.html">Lorem Ipsum</a></h3>
     <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </h6>
+    <h3>Website Navigation</h3> 
+    <h3><a href="./index.html">Main Page</a></h3>
 
 
 
