Changed style.css and added documentation

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <body>
         <div class="nav">
             <h1>Jacob Nelson-Foale</h1>
-            <button><a class="navLink" href="index.html">Home</a></button> <button><a class="navLink" href="about.html">About</a></button> <button><a class="navLink" href="contact.html">Contact</a></button>
+            <a class="navLink" href="index.html">Home</a> <a class="navLink" href="about.html">About</a> <a class="navLink" href="contact.html">Contact</a> <a class="navLink" href="./docs/index.html">Documentation Template</a>
         </div>
 
         <div class="content">
