--- a/content/loremIpsum.html
+++ b/content/loremIpsum.html
@@ -13,7 +13,7 @@
     <body>
         <div class="nav">
             <h1>Jacob Nelson-Foale</h1>
-            <a class="navLink" href="../index.html">Home</a> <a class="navLink" href="../about.html">About</a> <a class="navLink" href="../contact.html">Contact</a> <a class="navLink" href="./docs/index.html">Documentation Template</a>
+            <a class="navLink" href="../index.html">Home</a> <a class="navLink" href="../about.html">About</a> <a class="navLink" href="../contact.html">Contact</a></a>
         </div>
 
         <div class="content">
